package host

import (
	"context"
	"net/http"
	"runtime"
	"time"

	"strconv"

	"google.golang.org/protobuf/encoding/protojson"
	"google.golang.org/protobuf/proto"

	"github.com/libp2p/go-libp2p/core/host"
	"github.com/libp2p/go-libp2p/core/metrics"
	"github.com/libp2p/go-libp2p/core/network"
	ma "github.com/multiformats/go-multiaddr"
	"github.com/prometheus/client_golang/prometheus"
	"github.com/prometheus/client_golang/prometheus/promhttp"

	transportpb "github.com/weisyn/v1/pb/network/transport"
)

// diagnostics.go
// è¯Šæ–­ç®¡ç†å™¨ï¼šä¸¥æ ¼åŸºäºpbå®šä¹‰çš„è¯Šæ–­æ•°æ®åºåˆ—åŒ–
// ğŸ¯ æ ¸å¿ƒåŸåˆ™ï¼šå®Œå…¨ä½¿ç”¨pbå®šä¹‰ï¼Œåˆ é™¤æ‰€æœ‰JSON mapç»“æ„

// DiagnosticsManager è¯Šæ–­ç®¡ç†å™¨
type DiagnosticsManager struct {
	host     host.Host
	server   *http.Server
	bw       metrics.Reporter
	registry *prometheus.Registry

	// PrometheusæŒ‡æ ‡
	totalConnections prometheus.Counter
	messagesSent     prometheus.Counter
	messagesReceived prometheus.Counter
	bandwidthIn      prometheus.Counter
	bandwidthOut     prometheus.Counter
	errorCount       prometheus.Counter

	// å‘ç°æŒ‡æ ‡
	discoveryBootstrapAttempts  prometheus.Counter
	discoveryBootstrapSuccess   prometheus.Counter
	discoveryMDNSPeerFound      prometheus.Counter
	discoveryMDNSConnectSuccess prometheus.Counter
	discoveryMDNSConnectFail    prometheus.Counter
	discoveryLastBootstrapTS    prometheus.Gauge
	discoveryLastMDNSTS         prometheus.Gauge
}

// NewDiagnosticsManager åˆ›å»ºè¯Šæ–­ç®¡ç†å™¨
func NewDiagnosticsManager(host host.Host, bw metrics.Reporter, port int) *DiagnosticsManager {
	registry := prometheus.NewRegistry()

	dm := &DiagnosticsManager{
		host:     host,
		bw:       bw,
		registry: registry,
	}

	// æ³¨å†ŒPrometheusæŒ‡æ ‡
	dm.totalConnections = prometheus.NewCounter(prometheus.CounterOpts{
		Name: "p2p_connections_total",
		Help: "Total number of P2P connections established",
	})

	dm.messagesSent = prometheus.NewCounter(prometheus.CounterOpts{
		Name: "p2p_messages_sent_total",
		Help: "Total number of P2P messages sent",
	})

	dm.messagesReceived = prometheus.NewCounter(prometheus.CounterOpts{
		Name: "p2p_messages_received_total",
		Help: "Total number of P2P messages received",
	})

	dm.bandwidthIn = prometheus.NewCounter(prometheus.CounterOpts{
		Name: "p2p_bandwidth_in_bytes_total",
		Help: "Total inbound bandwidth in bytes",
	})

	dm.bandwidthOut = prometheus.NewCounter(prometheus.CounterOpts{
		Name: "p2p_bandwidth_out_bytes_total",
		Help: "Total outbound bandwidth in bytes",
	})

	dm.errorCount = prometheus.NewCounter(prometheus.CounterOpts{
		Name: "p2p_errors_total",
		Help: "Total number of P2P errors",
	})

	// å‘ç°æŒ‡æ ‡
	dm.discoveryBootstrapAttempts = prometheus.NewCounter(prometheus.CounterOpts{
		Name: "p2p_discovery_bootstrap_attempt_total",
		Help: "Total bootstrap attempts",
	})

	dm.discoveryBootstrapSuccess = prometheus.NewCounter(prometheus.CounterOpts{
		Name: "p2p_discovery_bootstrap_success_total",
		Help: "Successful bootstrap attempts",
	})

	dm.discoveryMDNSPeerFound = prometheus.NewCounter(prometheus.CounterOpts{
		Name: "p2p_discovery_mdns_peer_found_total",
		Help: "MDNS peers discovered",
	})

	dm.discoveryMDNSConnectSuccess = prometheus.NewCounter(prometheus.CounterOpts{
		Name: "p2p_discovery_mdns_connect_success_total",
		Help: "Successful MDNS connections",
	})

	dm.discoveryMDNSConnectFail = prometheus.NewCounter(prometheus.CounterOpts{
		Name: "p2p_discovery_mdns_connect_fail_total",
		Help: "Failed MDNS connections",
	})

	dm.discoveryLastBootstrapTS = prometheus.NewGauge(prometheus.GaugeOpts{
		Name: "p2p_discovery_last_bootstrap_unixtime",
		Help: "Last bootstrap timestamp",
	})

	dm.discoveryLastMDNSTS = prometheus.NewGauge(prometheus.GaugeOpts{
		Name: "p2p_discovery_last_mdns_found_unixtime",
		Help: "Last MDNS discovery timestamp",
	})

	// æ³¨å†Œæ‰€æœ‰æŒ‡æ ‡
	registry.MustRegister(
		dm.totalConnections,
		dm.messagesSent,
		dm.messagesReceived,
		dm.bandwidthIn,
		dm.bandwidthOut,
		dm.errorCount,
		dm.discoveryBootstrapAttempts,
		dm.discoveryBootstrapSuccess,
		dm.discoveryMDNSPeerFound,
		dm.discoveryMDNSConnectSuccess,
		dm.discoveryMDNSConnectFail,
		dm.discoveryLastBootstrapTS,
		dm.discoveryLastMDNSTS,
	)

	// åˆ›å»º HTTP æœåŠ¡å™¨ - ä¸¥æ ¼ä½¿ç”¨pbåºåˆ—åŒ–
	mux := http.NewServeMux()

	// Prometheus æŒ‡æ ‡ç«¯ç‚¹ï¼ˆä¿æŒæ ‡å‡†æ ¼å¼ï¼‰
	mux.Handle("/metrics", promhttp.HandlerFor(registry, promhttp.HandlerOpts{}))

	// ğŸ¯ é‡æ–°è®¾è®¡çš„pbä¼˜å…ˆè¯Šæ–­ç«¯ç‚¹
	mux.HandleFunc("/debug/peers", dm.handlePeersProtobuf)
	mux.HandleFunc("/debug/peers/json", dm.handlePeersJSON) // protobuf->JSONè½¬æ¢ç‰ˆæœ¬
	mux.HandleFunc("/debug/connections", dm.handleConnectionsProtobuf)
	mux.HandleFunc("/debug/connections/json", dm.handleConnectionsJSON)
	mux.HandleFunc("/debug/host", dm.handleHostInfoProtobuf)
	mux.HandleFunc("/debug/host/json", dm.handleHostInfoJSON)
	mux.HandleFunc("/debug/health", dm.handleHealthProtobuf)
	mux.HandleFunc("/debug/health/json", dm.handleHealthJSON)

	dm.server = &http.Server{Addr: ":" + strconv.Itoa(port), Handler: mux}

	return dm
}

// ==================== pbä¼˜å…ˆçš„å¤„ç†å™¨å®ç° ====================

// handlePeersProtobuf è¿”å›protobufæ ¼å¼çš„peerä¿¡æ¯
func (dm *DiagnosticsManager) handlePeersProtobuf(w http.ResponseWriter, r *http.Request) {
	if dm.host == nil {
		http.Error(w, "Host not available", http.StatusServiceUnavailable)
		return
	}

	peers := dm.host.Network().Peers()
	peerList := &transportpb.PeerListResponse{
		TotalPeers: int32(len(peers)),
	}

	for _, p := range peers {
		// è·å–åœ°å€
		addrs := dm.host.Peerstore().Addrs(p)
		addrStrings := make([]string, len(addrs))
		for i, addr := range addrs {
			addrStrings[i] = addr.String()
		}

		// æ„å»ºPeerInfo - ä¸¥æ ¼ä½¿ç”¨pbå®šä¹‰
		peerInfo := &transportpb.PeerInfo{
			Id:        p.String(),
			Addresses: addrStrings,
			IsTrusted: false, // ç®€åŒ–å¤„ç†
		}

		// è·å–è¿æ¥ä¿¡æ¯
		conns := dm.host.Network().ConnsToPeer(p)
		if len(conns) > 0 {
			peerInfo.ConnectedTime = uint64(conns[0].Stat().Opened.Unix())
			peerInfo.Direction = conns[0].Stat().Direction.String()
		}

		peerList.Peers = append(peerList.Peers, peerInfo)
	}

	// åºåˆ—åŒ–ä¸ºprotobuf
	data, err := proto.Marshal(peerList)
	if err != nil {
		http.Error(w, "Serialization failed", http.StatusInternalServerError)
		return
	}

	w.Header().Set("Content-Type", "application/x-protobuf")
	w.Write(data)
}

// handlePeersJSON è¿”å›JSONæ ¼å¼çš„peerä¿¡æ¯ï¼ˆprotobuf->JSONè½¬æ¢ï¼‰
func (dm *DiagnosticsManager) handlePeersJSON(w http.ResponseWriter, r *http.Request) {
	if dm.host == nil {
		http.Error(w, "Host not available", http.StatusServiceUnavailable)
		return
	}

	peers := dm.host.Network().Peers()
	peerList := &transportpb.PeerListResponse{
		TotalPeers: int32(len(peers)),
	}

	for _, p := range peers {
		addrs := dm.host.Peerstore().Addrs(p)
		addrStrings := make([]string, len(addrs))
		for i, addr := range addrs {
			addrStrings[i] = addr.String()
		}

		peerInfo := &transportpb.PeerInfo{
			Id:        p.String(),
			Addresses: addrStrings,
			IsTrusted: false,
		}

		conns := dm.host.Network().ConnsToPeer(p)
		if len(conns) > 0 {
			peerInfo.ConnectedTime = uint64(conns[0].Stat().Opened.Unix())
			peerInfo.Direction = conns[0].Stat().Direction.String()
		}

		peerList.Peers = append(peerList.Peers, peerInfo)
	}

	// ğŸ¯ ä½¿ç”¨protojsonè¿›è¡Œpb->JSONè½¬æ¢ï¼Œè€Œä¸æ˜¯æ‰‹åŠ¨æ„å»ºJSON
	marshaler := protojson.MarshalOptions{
		EmitUnpopulated: true,
		Indent:          "  ",
	}

	jsonData, err := marshaler.Marshal(peerList)
	if err != nil {
		http.Error(w, "JSON conversion failed", http.StatusInternalServerError)
		return
	}

	w.Header().Set("Content-Type", "application/json")
	w.Write(jsonData)
}

// handleConnectionsProtobuf è¿”å›protobufæ ¼å¼çš„è¿æ¥ä¿¡æ¯
func (dm *DiagnosticsManager) handleConnectionsProtobuf(w http.ResponseWriter, r *http.Request) {
	if dm.host == nil {
		http.Error(w, "Host not available", http.StatusServiceUnavailable)
		return
	}

	conns := dm.host.Network().Conns()
	// ğŸš¨ æ¶æ„é—®é¢˜ï¼šéœ€è¦å®šä¹‰ConnectionListResponseæ¶ˆæ¯
	// ä¸´æ—¶ä½¿ç”¨PeerListResponseç»“æ„

	peerList := &transportpb.PeerListResponse{
		TotalPeers: int32(len(conns)),
	}

	for _, conn := range conns {
		peerInfo := &transportpb.PeerInfo{
			Id:            conn.RemotePeer().String(),
			Addresses:     []string{conn.RemoteMultiaddr().String()},
			Direction:     conn.Stat().Direction.String(),
			ConnectedTime: uint64(conn.Stat().Opened.Unix()),
		}
		peerList.Peers = append(peerList.Peers, peerInfo)
	}

	data, err := proto.Marshal(peerList)
	if err != nil {
		http.Error(w, "Serialization failed", http.StatusInternalServerError)
		return
	}

	w.Header().Set("Content-Type", "application/x-protobuf")
	w.Write(data)
}

// handleConnectionsJSON protobuf->JSONè½¬æ¢ç‰ˆæœ¬
func (dm *DiagnosticsManager) handleConnectionsJSON(w http.ResponseWriter, r *http.Request) {
	if dm.host == nil {
		http.Error(w, "Host not available", http.StatusServiceUnavailable)
		return
	}

	conns := dm.host.Network().Conns()
	peerList := &transportpb.PeerListResponse{
		TotalPeers: int32(len(conns)),
	}

	for _, conn := range conns {
		peerInfo := &transportpb.PeerInfo{
			Id:            conn.RemotePeer().String(),
			Addresses:     []string{conn.RemoteMultiaddr().String()},
			Direction:     conn.Stat().Direction.String(),
			ConnectedTime: uint64(conn.Stat().Opened.Unix()),
		}
		peerList.Peers = append(peerList.Peers, peerInfo)
	}

	marshaler := protojson.MarshalOptions{EmitUnpopulated: true, Indent: "  "}
	jsonData, err := marshaler.Marshal(peerList)
	if err != nil {
		http.Error(w, "JSON conversion failed", http.StatusInternalServerError)
		return
	}

	w.Header().Set("Content-Type", "application/json")
	w.Write(jsonData)
}

// handleHostInfoProtobuf è¿”å›protobufæ ¼å¼çš„ä¸»æœºä¿¡æ¯
func (dm *DiagnosticsManager) handleHostInfoProtobuf(w http.ResponseWriter, r *http.Request) {
	if dm.host == nil {
		http.Error(w, "Host not available", http.StatusServiceUnavailable)
		return
	}

	addrs := dm.host.Addrs()
	addrStrings := make([]string, len(addrs))
	for i, addr := range addrs {
		addrStrings[i] = addr.String()
	}

	protocolIDs := dm.host.Mux().Protocols()
	protocolStrings := make([]string, len(protocolIDs))
	for i, pid := range protocolIDs {
		protocolStrings[i] = string(pid)
	}

	nodeInfo := &transportpb.NodeInfo{
		Id:        dm.host.ID().String(),
		Addresses: addrStrings,
		Protocols: protocolStrings,
		NetworkId: dm.getNetworkIdBytes(),
	}

	data, err := proto.Marshal(nodeInfo)
	if err != nil {
		http.Error(w, "Serialization failed", http.StatusInternalServerError)
		return
	}

	w.Header().Set("Content-Type", "application/x-protobuf")
	w.Write(data)
}

// handleHostInfoJSON protobuf->JSONè½¬æ¢ç‰ˆæœ¬
func (dm *DiagnosticsManager) handleHostInfoJSON(w http.ResponseWriter, r *http.Request) {
	if dm.host == nil {
		http.Error(w, "Host not available", http.StatusServiceUnavailable)
		return
	}

	addrs := dm.host.Addrs()
	addrStrings := make([]string, len(addrs))
	for i, addr := range addrs {
		addrStrings[i] = addr.String()
	}

	protocolIDs := dm.host.Mux().Protocols()
	protocolStrings := make([]string, len(protocolIDs))
	for i, pid := range protocolIDs {
		protocolStrings[i] = string(pid)
	}

	nodeInfo := &transportpb.NodeInfo{
		Id:        dm.host.ID().String(),
		Addresses: addrStrings,
		Protocols: protocolStrings,
		NetworkId: dm.getNetworkIdBytes(),
	}

	marshaler := protojson.MarshalOptions{EmitUnpopulated: true, Indent: "  "}
	jsonData, err := marshaler.Marshal(nodeInfo)
	if err != nil {
		http.Error(w, "JSON conversion failed", http.StatusInternalServerError)
		return
	}

	w.Header().Set("Content-Type", "application/json")
	w.Write(jsonData)
}

// handleHealthProtobuf å¥åº·æ£€æŸ¥ - protobufç‰ˆæœ¬
func (dm *DiagnosticsManager) handleHealthProtobuf(w http.ResponseWriter, r *http.Request) {
	// ğŸš¨ æ¶æ„é—®é¢˜ï¼šéœ€è¦å®šä¹‰HealthStatusæ¶ˆæ¯
	// ä¸´æ—¶ä½¿ç”¨ç®€å•çš„æ–¹å¼
	status := "healthy"
	if dm.host == nil {
		status = "unhealthy"
		w.WriteHeader(http.StatusServiceUnavailable)
	}

	// ä¸´æ—¶å®ç°ï¼šç›´æ¥å†™çŠ¶æ€å­—ç¬¦ä¸²
	w.Header().Set("Content-Type", "text/plain")
	w.Write([]byte(status))
}

// handleHealthJSON å¥åº·æ£€æŸ¥ - JSONç‰ˆæœ¬
func (dm *DiagnosticsManager) handleHealthJSON(w http.ResponseWriter, r *http.Request) {
	status := map[string]interface{}{
		"status":    "healthy",
		"timestamp": time.Now().Unix(),
	}

	if dm.host == nil {
		status["status"] = "unhealthy"
		status["reason"] = "host not available"
		w.WriteHeader(http.StatusServiceUnavailable)
	}

	// ğŸš¨ è¿™é‡Œä»ä½¿ç”¨mapç»“æ„ï¼Œè¿åäº†pbä¼˜å…ˆåŸåˆ™
	// éœ€è¦å®šä¹‰ä¸“é—¨çš„HealthStatus pbæ¶ˆæ¯
	w.Header().Set("Content-Type", "application/json")
	w.Write([]byte(`{"status":"` + status["status"].(string) + `"}`))
}

// ==================== ç”Ÿå‘½å‘¨æœŸç®¡ç† ====================

// dmNotifiee å®ç° network.Notifieeï¼Œå°†äº‹ä»¶è½¬ä¸ºæŒ‡æ ‡
type dmNotifiee struct{ dm *DiagnosticsManager }

func (n *dmNotifiee) Listen(_ network.Network, _ ma.Multiaddr)       {}
func (n *dmNotifiee) ListenClose(_ network.Network, _ ma.Multiaddr)  {}
func (n *dmNotifiee) Connected(_ network.Network, c network.Conn)    { n.dm.RecordConnection() }
func (n *dmNotifiee) Disconnected(_ network.Network, c network.Conn) {}

// getNetworkIdBytes è·å–æ­£ç¡®çš„ç½‘ç»œIDå­—èŠ‚æ•°ç»„
// ğŸ¯ **ç½‘ç»œéš”ç¦»æ ‡è¯†ç¬¦ç”Ÿæˆå™¨**
//
// è¿”å›ç”¨äºP2Pæ¡æ‰‹çš„ç½‘ç»œæ ‡è¯†ç¬¦ï¼Œè€Œä¸æ˜¯æœ¬åœ°PeerIDã€‚
// è¿™ä¸ªæ ‡è¯†ç¬¦ç”¨äºç¡®ä¿èŠ‚ç‚¹åªè¿æ¥åˆ°ç›¸åŒç½‘ç»œçš„å…¶ä»–èŠ‚ç‚¹ã€‚
//
// æ ¼å¼ï¼š{NetworkNamespace}:{ChainID}
// ä¾‹å¦‚ï¼š"testnet:2" æˆ– "mainnet:1"
//
// TODO: éœ€è¦ä»é…ç½®æä¾›è€…è·å–çœŸå®çš„ç½‘ç»œå‘½åç©ºé—´å’Œé“¾ID
func (dm *DiagnosticsManager) getNetworkIdBytes() []byte {
	// ä¸´æ—¶ç¡¬ç¼–ç ï¼Œåº”è¯¥ä»é…ç½®æä¾›è€…è·å–
	// TODO: é›†æˆé…ç½®æä¾›è€…æ¥è·å–çœŸå®çš„ç½‘ç»œä¿¡æ¯
	networkNamespace := "mainnet" // åº”è¯¥æ¥è‡ªé…ç½®
	chainID := "1"                // åº”è¯¥æ¥è‡ªé…ç½®

	networkId := networkNamespace + ":" + chainID
	return []byte(networkId)
}

// Start å¯åŠ¨è¯Šæ–­æœåŠ¡
func (dm *DiagnosticsManager) Start() error {
	if dm.host != nil {
		dm.host.Network().Notify(&dmNotifiee{dm: dm})
	}

	go dm.collectMetrics()
	go func() {
		_ = dm.server.ListenAndServe()
	}()

	return nil
}

// Stop åœæ­¢è¯Šæ–­æœåŠ¡
func (dm *DiagnosticsManager) Stop() error {
	if dm.server != nil {
		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
		defer cancel()
		return dm.server.Shutdown(ctx)
	}
	return nil
}

// collectMetrics æ”¶é›†æŒ‡æ ‡
func (dm *DiagnosticsManager) collectMetrics() {
	ticker := time.NewTicker(10 * time.Second)
	defer ticker.Stop()

	for range ticker.C {
		// æ”¶é›†è¿è¡Œæ—¶æŒ‡æ ‡
		var memStats runtime.MemStats
		runtime.ReadMemStats(&memStats)
		// è¿™é‡Œå¯ä»¥æ·»åŠ æ›´å¤šæŒ‡æ ‡æ”¶é›†é€»è¾‘
	}
}

// ==================== æŒ‡æ ‡è®°å½•æ–¹æ³• ====================

func (dm *DiagnosticsManager) RecordMessage(sent bool) {
	if sent {
		dm.messagesSent.Inc()
	} else {
		dm.messagesReceived.Inc()
	}
}

func (dm *DiagnosticsManager) RecordBandwidth(bytes int64, out bool) {
	if out {
		dm.bandwidthOut.Add(float64(bytes))
	} else {
		dm.bandwidthIn.Add(float64(bytes))
	}
}

func (dm *DiagnosticsManager) RecordConnection() {
	dm.totalConnections.Inc()
}

func (dm *DiagnosticsManager) RecordError() {
	dm.errorCount.Inc()
}

// å‘ç°æŒ‡æ ‡è®°å½•æ–¹æ³•
func (dm *DiagnosticsManager) RecordDiscoveryBootstrapAttempt() {
	dm.discoveryBootstrapAttempts.Inc()
	dm.discoveryLastBootstrapTS.SetToCurrentTime()
}

func (dm *DiagnosticsManager) RecordDiscoveryBootstrapSuccess() {
	dm.discoveryBootstrapSuccess.Inc()
}

func (dm *DiagnosticsManager) RecordDiscoveryMDNSPeerFound() {
	dm.discoveryMDNSPeerFound.Inc()
	dm.discoveryLastMDNSTS.SetToCurrentTime()
}

func (dm *DiagnosticsManager) RecordDiscoveryMDNSConnectSuccess() {
	dm.discoveryMDNSConnectSuccess.Inc()
}

func (dm *DiagnosticsManager) RecordDiscoveryMDNSConnectFail() {
	dm.discoveryMDNSConnectFail.Inc()
}

// ==================== æ¶æ„é—®é¢˜æ€»ç»“ ====================

/*
ğŸš¨ é€šè¿‡å½»åº•é‡æ„è¯Šæ–­ç³»ç»Ÿï¼Œæš´éœ²çš„æ¶æ„éœ€æ±‚ï¼š

1. **éœ€è¦è¡¥å……çš„pbæ¶ˆæ¯å®šä¹‰**ï¼š
   ```proto
   // åº”åœ¨pb/network/transport/diagnostics.protoä¸­å®šä¹‰ï¼š
   message HealthStatus {
     string status = 1;
     uint64 timestamp = 2;
     string reason = 3;
   }

   message ConnectionInfo {
     string peer_id = 1;
     string local_addr = 2;
     string remote_addr = 3;
     string direction = 4;
     uint64 opened_time = 5;
     int32 streams_count = 6;
   }

   message ConnectionListResponse {
     repeated ConnectionInfo connections = 1;
     int32 total_connections = 2;
   }

   message DiagnosticsStats {
     RuntimeStats runtime = 1;
     NetworkStats network = 2;
     BandwidthStats bandwidth = 3;
   }
   ```

2. **å½“å‰è§£å†³æ–¹æ¡ˆç‰¹ç‚¹**ï¼š
   âœ… å®Œå…¨åŸºäºpbæ•°æ®ç»“æ„
   âœ… æä¾›protobufå’ŒJSONä¸¤ç§æ ¼å¼
   âœ… ä½¿ç”¨protojsonè¿›è¡Œæ ‡å‡†è½¬æ¢
   âŒ éƒ¨åˆ†åœ°æ–¹ä»éœ€è¦æ›´å®Œå–„çš„pbå®šä¹‰

3. **æ¶æ„ä¼˜åŠ¿**ï¼š
   - ç±»å‹å®‰å…¨çš„æ•°æ®ç»“æ„
   - æ ‡å‡†åŒ–çš„åºåˆ—åŒ–æ ¼å¼
   - å‘åå…¼å®¹çš„APIæ¼”è¿›
   - é«˜æ•ˆçš„äºŒè¿›åˆ¶ä¼ è¾“

è¿™ç§pbä¼˜å…ˆçš„è¯Šæ–­ç³»ç»Ÿè®¾è®¡æä¾›äº†çœŸæ­£çš„ç±»å‹å®‰å…¨ä¿éšœã€‚
*/

// UpdateDiscoveryLastMDNSTS æ›´æ–°MDNSå‘ç°æ—¶é—´æˆ³
func (dm *DiagnosticsManager) UpdateDiscoveryLastMDNSTS() {
	if dm.discoveryLastMDNSTS != nil {
		dm.discoveryLastMDNSTS.SetToCurrentTime()
	}
}

// RecordDiscoveryMDNSConnectOK è®°å½•MDNSè¿æ¥æˆåŠŸ
func (dm *DiagnosticsManager) RecordDiscoveryMDNSConnectOK() {
	if dm.discoveryMDNSConnectSuccess != nil {
		dm.discoveryMDNSConnectSuccess.Inc()
	}
}

// UpdateDiscoveryLastBootstrapTS æ›´æ–°Bootstrapæ—¶é—´æˆ³
func (dm *DiagnosticsManager) UpdateDiscoveryLastBootstrapTS() {
	if dm.discoveryLastBootstrapTS != nil {
		dm.discoveryLastBootstrapTS.SetToCurrentTime()
	}
}
